# ranger_trading_bot

./: .dockerignore  .gitignore  CANDLESTICK_WEBSOCKET_WALKTHROUGH.md  Cargo.toml  Dockerfile  Makefile  README.md  current_implementation_plan.md  docker-compose.yml  momentum_tracker.rs  rsi_divergence_indicator_review.md  sample.env  signal_logic_generator.md  vrvp_implementation_plan_review.md
.github/workflows/: ci.yml
reviews/: confluence_gate_review.md  signal_generator_assesement.md  smart_money_concepts_review.md  veto_table.md
scripts/: ci_check.sh
src/: main.rs  types.rs
src/api/: handlers.rs  mod.rs
src/bot/: confluence.rs  mod.rs  structural_sl.rs  structural_tp.rs
src/bot/capitulation_phase/: mod.rs
src/bot/scalper/: mod.rs
src/bot/zones/: mod.rs
src/cache/: mod.rs
src/calendar/: mod.rs
src/config/: mod.rs
src/data/: aggregator.rs  kaggle.rs  mod.rs
src/encryption/: mod.rs
src/exchange/: mod.rs
src/exchange/bitget/: mod.rs
src/exchange/bitget/fees/: mod.rs
src/exchange/bitunix/: mod.rs
src/exchange/bitunix/fees/: mod.rs
src/exchange/bitunix/ws/: mod.rs
src/graph/: mod.rs
src/helper/: mod.rs
src/regime/: mod.rs
src/tasks/: mod.rs
src/trackers/: mod.rs
src/trackers/ema/: mod.rs
src/trackers/gaussian/: mod.rs
src/trackers/ichimoku/: mod.rs
src/trackers/llm_sentiment/: sentiment.rs
src/trackers/momentum/: mod.rs
src/trackers/rsi_core/: mod.rs
src/trackers/rsi_divergence_indicator/: mod.rs
src/trackers/rsi_regime_tracker/: mod.rs
src/trackers/smart_money_concepts/: mod.rs
src/trackers/visible_range_volume_profile/: mod.rs
