[package]
name = "btc-trading-bot"
version = "0.0.1"
edition = "2024"

# Dependencies -------------------------------------------------------------
[dependencies]
tokio          = { version = "1", features = ["full"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
reqwest        = { version = "0.11", features = ["json"] }
dotenv         = "0.15"      # for loading API keys from .env
log            = "0.4"
simple_logger  = "1.13"
async-trait = "0.1.89"
anyhow = "1.0"
redis          = { version = "0.23", features = ["tokio-comp"] }
redis-derive = "0.1.7"
chrono = { version = "0.4", features = ["serde",] }
anyhow_serde = "1.0"
tokio-cron-scheduler = "*"

# UUID v4 + serde support
uuid = { version = "1.4", features = ["serde", "v4"] }

# Optional: you can replace `reqwest` with the official exchange SDK if it exists.
