[package]
name = "btc-trading-bot"
version = "0.0.1"
edition = "2024"

# Dependencies -------------------------------------------------------------
[dependencies]
#Schedulers
tokio          = { version = "1", features = ["full"] }
tokio-cron-scheduler = "*"

#JSON
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"

#HTTP
reqwest        = { version = "0.11", features = ["json"] }

#.env support
dotenv         = "0.15"      # for loading API keys from .env

#Logger
log            = "0.4"
simple_logger  = "1.13"

async-trait = "0.1.89"
anyhow = "1.0"
anyhow_serde = "1.0"

#Redis
redis          = { version = "0.23", features = ["tokio-comp"] }
redis-derive = "0.1.7"
chrono = { version = "0.4", features = ["serde",] }

# Encryption
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
digest = "0.10"

# UUID v4 + serde support
uuid = { version = "1.4", features = ["serde", "v4"] }

# Optional: you can replace `reqwest` with the official exchange SDK if it exists.
