[package]
name = "btc-trading-bot"
version = "0.0.1"
edition = "2021"

# Dependencies ------------------------------------------------------------- cargo build 2>&1 | tail -20
[dependencies]
#Schedulers
tokio          = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.13.0"

#Websockets
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
futures-util = "0.3"
async-stream = "0.3"
url = "2"

#JSON
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"

#HTTP
reqwest        = { version = "0.11", features = ["json", "blocking", "stream"] }

#.env support
dotenv         = "0.15"      # for loading API keys from .env

#Logger
log            = "0.4"
simple_logger  = "1.13"

async-trait = "0.1.89"
anyhow = "1.0"
anyhow_serde = "1.0"

#Redis
redis          = { version = "0.23", features = ["tokio-comp"] }
redis-derive = "0.1.7"
chrono = { version = "0.4", features = ["serde",] }

# CSV and ZIP
csv = "1.3"
zip = "7.0.0"

# Encryption
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
digest = "0.10"

# UUID v4 + serde support
uuid = { version = "1.4", features = ["serde", "v4"] }

# Temp file
tempfile = "3.24.0"

# Optional: you can replace `reqwest` with the official exchange SDK if it exists.
